Start working on workout algorithm based on User Preference